--- a/week4_final/registration.html
+++ b/week4_final/registration.html
@@ -15,22 +15,26 @@
          <li><img src="images/icon.jpg" id="icon"/></li>
         </ul>
   		<form id="formRegister">
-      <p >Last Name:<br />
+      <p>Last Name:<br />
           <input type="text" required name="lastName" size="30" maxlength="60" />
         </p>
          <p >First Name:<br />
           <input type="text" required name="firstName" size="30" maxlength="60" />
         </p>
-         <p >Email:<br />
+         <p>Email:<br />
           <input type="text" required name="email" size="30" maxlength="60" />
-        <p >Password:<br />
-          <input type="password"  required name="password" size="30" maxlength="60" />
+         </p>
+          <p>Username:<br />
+          <input type="text"  required name="username" size="30" maxlength="60"  />
+          </p>
+        <p>Password:<br />
+          <input type="text"  name="password" size="30" maxlength="60" class="tooltip" title="Please, enter your password" required />
         </p>
          <p> Confirm Password:<br />
-          <input type="password"  required name="password" size="30" maxlength="60" />
+          <input type="text"  required name="password" size="30" maxlength="60" />
         </p>
           <input type="submit" name="subscribe"
-          value="Register" class="register"/> 
+          value="Register" class="register" /> 
         </p>
   	</form><!-- End the form-->
 
